--- a/owl-carousel/owl.theme.css
+++ b/owl-carousel/owl.theme.css
@@ -137,7 +137,7 @@ changed= added padding
 }
 .owl-background { 
     margin: 0 auto;
-    max-width: 1200px;
+    max-width: 100%;
 	width: 100%;
 	height: auto;
 	position: relative;
